bug report + contrast changing

--- a/frontend/src/scss/components/accessibility.scss
+++ b/frontend/src/scss/components/accessibility.scss
@@ -163,3 +163,21 @@ header#accessibilityPanel {
     background-color: #00772e;
   }
 }
+
+.accessibility {
+  .polygon-container.js-polygon-container {
+    width: fit-content;
+  }
+  .d-flex.flex-column.gap-4.gap-lg-5.gap-xl-4.bg-dark-0.rounded-3.px-3.py-4.p-md-5.px-lg-6.p-xl-6 {
+    width: fit-content;
+    padding-right: 30px !important;
+    padding-left: 30px !important;
+  }
+  .btn.btn-primary.btn-lg-lg {
+    width: 100%;
+  }
+  .col-12.col-md-6.col-xl-3.d-flex.flex-column.row-gap-3 {
+    width: auto;
+    align-items: flex-start;
+  }
+}
